design: fix alignment of nested subfield + buttons

--- a/includes/settings/scss/_field-list.scss
+++ b/includes/settings/scss/_field-list.scss
@@ -120,6 +120,18 @@
 	width: 32px;
 }
 
+.subfield-list .subfield-list .add-item button {
+	margin-left: -8px;
+}
+
+.subfield-list .subfield-list .subfield-list .add-item button {
+	margin-left: -11px;
+}
+
+.subfield-list .subfield-list .subfield-list .add-item button {
+	margin-left: -14px;
+}
+
 .field-list .reorder button {
 	background-color: transparent;
 	padding: 17px 18px 14px 18px;
